Table Modpack_Access_Permission as perm {
  user_id int [not null]
  modpack_id int [not null]
  Indexes {
    (user_id, modpack_id) [pk]
  }
}

Table User {
  id int [pk]
  person_id int [unique]
  username varchar [not null, unique]
}

Table Person {
  id int [pk]
}

Table Minecraft_Version {
  id int [pk]
  version char(10) [unique]
  title varchar
}

Table Modpack {
  id int [pk]
  owner_id int [not null]
  minecraft_version_id int [not null]
  title varchar [not null, unique]
}

Table Modpack_Contribution {
  modpack_id int [not null]
  contributor_id int [not null]
  role varchar [not null, default: 'contributor']
  Indexes {
    (modpack_id, contributor_id) [pk]
  }
}

Table Contributor {
  id int [pk]
  person_id int [unique]
  name varchar [not null]
}

Table Pack_File {
  id int [pk]
  local_path varchar [not null]
  remote_uri varchar [not null]
}

Table Misc_Pack_File {
  pack_file_id int [not null]
  modpack_version_id int [not null]
  Indexes {
    (pack_file_id, modpack_version_id) [pk]
  }
}

Table Modpack_Version {
  id int [pk]
  modpack_id int [not null]
  version char(10) [not null]
}

Table Mod_Contribution {
  contributor_id int [not null]
  mod_id int [not null]
  role varchar [not null, default: 'contributor']
  Indexes {
    (contributor_id, mod_id) [pk]
  }
}

Table Mod_Config {
  pack_file_id int [not null]
  modpack_version_id int [not null]
  mod_id int [not null]
  Indexes {
    (pack_file_id, modpack_version_id) [pk]
    (modpack_version_id, mod_id) [name:'listing_id']
  }
}

Table Mod_Listing {
  modpack_version_id int [not null]
  mod_id int [not null]
  modfile_id int [not null]
  Indexes {
    (modpack_version_id, mod_id) [pk]
  }
}

Table Mod {
  id int [pk]
  owner_id int [not null]
  name varchar [not null, unique]
  website varchar [not null]
}

Table Modfile {
  pack_file_id int [not null, unique]
  mod_id int [not null]
  minecraft_version_id int [not null]
  version varchar [not null]
  artifact_uri varchar [not null, unique]
  Indexes {
    pack_file_id [pk]
  }
}

Ref: User.person_id - Person.id
Ref: Contributor.person_id - Person.id

Ref: Modfile.pack_file_id - Pack_File.id

Ref: Mod_Config.pack_file_id - Pack_File.id
Ref: Mod_Config.(modpack_version_id, mod_id) < Mod_Listing.(modpack_version_id, mod_id)

Ref: Misc_Pack_File.pack_file_id > Pack_File.id
Ref: Misc_Pack_File.modpack_version_id > Modpack_Version.id

Ref: Modpack.owner_id > User.id
Ref: Modpack.minecraft_version_id > Minecraft_Version.id

Ref: Modpack_Access_Permission.modpack_id > Modpack.id
Ref: Modpack_Access_Permission.user_id > User.id

Ref: Modpack_Contribution.contributor_id > Contributor.id
Ref: Modpack_Contribution.modpack_id > Modpack.id

Ref: Mod_Contribution.contributor_id > Contributor.id
Ref: Mod_Contribution.mod_id > Mod.id

Ref: Modpack_Version.modpack_id > Modpack.id
Ref: Mod.owner_id > Contributor.id

Ref: Modfile.mod_id > Mod.id
Ref: Modfile.minecraft_version_id > Minecraft_Version.id

Ref: Mod_Listing.modpack_version_id > Modpack_Version.id
Ref: Mod_Listing.mod_id > Mod.id
Ref: Mod_Listing.modfile_id > Modfile.pack_file_id
